--- a/index.html
+++ b/index.html
@@ -7,29 +7,65 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css">
     <link rel="stylesheet" href="style.css" type="text/css">
     <title>Matija's Web Developer Portfolio</title>
 </head>
 
 <body>
     <header>
-        <div class="row">
-            <a href="index.html" class="bg-color-name-title col-md-4 heading">
+        <div class="row no-gutters">
+            <a href="index.html" class="bg-color-name-title col heading">
                 <h1 class='name'>Matija Sekelj</h1>
                 <h2 class='title'>Full Stack Web Developer</h2>
             </a>
-            
-            <div class="col-md-8">
-                <nav class="navigation">
-                    <a href="#">HOME</a>
-                    <a href="#">ABOUT</a>
-                    <a href="#">CONTACT</a>
-                    <a href="#" class="fa fa-download" aria-hidden="true">&nbspCV</a>
-                </nav>
+        </div>
+        <div class="row no-gutters">
+            <div class="col">
+                <ul id="nav" class="list-inline menucontainer">
+                    <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem">
+                        <a href="#"><i class="fa fa-home" aria-hidden="true"></i><span>&nbspHome</span></a>
+                    </li>
+                    <li class="col-6 col-sm-3 ui-menu-color-about list-inline-item menuitem">
+                        <a href="#"><i class="fa fa-user" aria-hidden="true"></i><span>&nbspAbout</span></a>
+                    </li>
+                    <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
+                        <a href="#"><i class="fa fa-comment-o" aria-hidden="true"></i><span>&nbspContact</span></a>
+                    </li>
+                    <li class="col-6 col-sm-3 ui-menu-color-cv list-inline-item menuitem">
+                        <a href="#"><i class="fa fa-download" aria-hidden="true"></i><span>&nbspCV</span></a>
+                    </li>
+                </ul>
             </div>
         </div>
     </header>
+    <footer class="container-fluid">
+        <div class="row">
+            <div class="col-sm-6">
+                <h5 class="uppercase general-sub">A wise man once said.</h5>
+                <p class="inline-block">“If opportunity doesn’t knock, build a door.”
 
+                        – Milton Berle</p>
+            </div>
+            <div class="col-sm-6">
+                <h5 class="uppercase general-sub">Social</h5>
+                <ul class="list-inline social-links">
+                    <li class="list-inline-item">
+                        <a href="https://ie.linkedin.com/in/matija-sekelj-98449194" target="_blank">
+                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+                            <span class="sr-only">Linkedin</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://github.com/Matija0408" target="_blank">
+                            <i class="fa fa-github git-color" aria-hidden="true"></i>
+                            <span class="sr-only">Github</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
