Footer media queries sorted

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 
                         – Milton Berle</p>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-6 social-links">
                 <h5 class="uppercase general-sub">Social</h5>
-                <ul class="list-inline social-links">
+                <ul class="list-inline-item">
                     <li class="list-inline-item">
                         <a href="https://ie.linkedin.com/in/matija-sekelj-98449194" target="_blank">
                             <i class="fa fa-linkedin" aria-hidden="true"></i>
