--- a/index.html
+++ b/index.html
@@ -39,13 +39,20 @@
             </div>
         </div>
     </header>
+
+    <section class="container-fluid">
+        
+             
+
+    </section>
+
     <footer class="container-fluid">
         <div class="row">
             <div class="col-sm-6">
                 <h5 class="uppercase general-sub">A wise man once said.</h5>
-                <p class="inline-block">“If opportunity doesn’t knock, build a door.”
+                <p class="inline-block">“The only thing worse than being blind is having sight but no vision.”
 
-                        – Milton Berle</p>
+                        – Helen Keller</p>
             </div>
             <div class="col-sm-6 social-links">
                 <h5 class="uppercase general-sub">Social</h5>
