About/MyWork/first-site

--- a/about.html
+++ b/about.html
@@ -13,12 +13,11 @@
 </head>
 
 <body>
-
-    <header>
-        <!--Background-->
+    <!--Main Layout about page-->
+    <main class="bg-about">
         <div>
+            <!--nav boilerplate taken from Bootstrap doc-->
             <div>
-                <!--nav boilerplate taken from Bootstrap doc-->
                 <ul class="nav justify-content-center links">
                     <li class="nav-item">
                         <a class="nav-link border-h" href="index2.html">Home</a>
@@ -30,21 +29,101 @@
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link border-d" href="doc/FakeCV.pdf" target="_blank"><i class="fa fa-download" aria-hidden="true"></i>&nbsp CV</a>
+                        <a class="nav-link border-d" href="doc/FakeCV.pdf" target="_blank"><i class="fa fa-download"
+                                aria-hidden="true"></i>&nbsp CV</a>
                     </li>
-                    <!--nav boilerplate taken from Bootstrap doc-->
                 </ul>
-                <!--nav-->
+                <!--nav boilerplate taken from Bootstrap doc-->
+                <!--github linkedin links-->
+            </div>
+            <div class="nav justify-content-center link">
+                <ul class="nav-link link-position">
+                    <li class="nav-item link">
+                        <a href="https://ie.linkedin.com/in/matija-sekelj-98449194" target="_blank">
+                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+                            <span class="sr-only">Linkedin</span>
+                        </a>
+                    </li>
+                    <li class="nav-item link">
+                        <a href="https://github.com/Matija0408" target="_blank">
+                            <i class="fa fa-github git-color" aria-hidden="true"></i>
+                            <span class="sr-only">Github</span>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
-        <!--Background-->
-    </header>
+        <!--github linkedin links-->
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-6">
+                    <h3>About Me</h3>
+                    <p class="about-me-text">
+                        I am a student of Full Stack Web Developer course at Code Institute in Dublin and at the age of
+                        38 i discovered that i enjoy creating stuff - just anything i
+                        can imagine. And in my eyes, coding is the perfect tool for that. First, i'm learning Web
+                        Development,
+                        and my thoughts about that are as follows:<br><br>
 
+                        <span>Every website is created for a specific purpose. My goal is to showcase that purpose with
+                            beauty, elegance and perfect presentation of the sites goal.</span>
+                    </p>
+                </div>
+                <div class="col-sm-6"></div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4"></div>
+                <div class="col-sm-4">
+                    <p class="thought">
+                        “I haven’t failed. I’ve just found 10,000 ways that won’t work.”
 
-    <!--Main Layout-->
-    <main>
-
+                        – Thomas Edison
+                    </p>
+                </div>
+                <div class="col-sm-4"></div>
+            </div>
+        </div>
     </main>
+    <!--Main Layout about page-->
+    <section>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-4"></div>
+                <div class="col-md-4">
+                    <div class="what-i-use">
+                        <h3>What I use</h3>
+                        <p>HTML<br>CSS<br>JavaScript<br>Python<br>Kotlin</p>
+                    </div>
+                </div>
+                <div class="col-md-4"></div>
+            </div>
+            <div class="row my-work">
+                <div class="col-md-6">
+                    <h3>My Work</h3>
+                </div>
+                <div class="col-md-6"></div>
+            </div>
+            <div class="row site1">
+                <div class="col-md-3">
+                    <h4>My Portfolio Website</h4>
+                </div>
+                <div class="col-md-3">
+                    <div>
+                        <a href="index2.html" target="_blank"><img src="mywork_site_pic/my-portfolio-site.PNG"
+                                alt="My first portfolio site"></a>
+                    </div>
+                </div>
+
+                <div class="col-md-3 site1p">
+                    <p>Languages used:<br>HTML<br>CSS</p>
+                    <a href="index2.html" target="_blank"><button>Live</button></a>
+                    <a href="https://github.com/Matija0408/First-project-take2"
+                        target="_blank"><button>Github</button></a>
+                </div>
+                <div class="col-md-3"></div>
+            </div>
+        </div>
+    </section>
     <!--Main Layout-->
 
     <!--Footer-->
