--- a/index2.html
+++ b/index2.html
@@ -18,7 +18,7 @@
 
 
         <!--Background-->
-        <div id="img-bg">
+        <div class="img-bg">
             <div>
                 <!--nav boilerplate taken from Bootstrap doc-->
                 <ul class="nav justify-content-center links">
@@ -32,7 +32,8 @@
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link border-d" href="doc/FakeCV.pdf" target="_blank"><i class="fa fa-download" aria-hidden="true"></i>&nbsp CV</a>
+                        <a class="nav-link border-d" href="doc/FakeCV.pdf" target="_blank"><i class="fa fa-download"
+                                aria-hidden="true"></i>&nbsp CV</a>
                     </li>
                     <!--nav boilerplate taken from Bootstrap doc-->
                 </ul>
@@ -70,21 +71,6 @@
         <!--Background-->
 
     </header>
-
-
-    <!--Main Layout-->
-    <main>
-
-    </main>
-    <!--Main Layout-->
-
-    <!--Footer-->
-    <footer>
-
-    </footer>
-    <!--Footer-->
-
-
 </body>
 
 </html>
