About page finished

--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css">
     <link rel="stylesheet" href="style2.css" type="text/css">
     <title>Matija's Web Developer Portfolio</title>
@@ -60,7 +61,7 @@
                     <h3>About Me</h3>
                     <p class="about-me-text">
                         I am a student of Full Stack Web Developer course at Code Institute in Dublin and at the age of
-                        38 i discovered that i enjoy creating stuff - just anything i
+                        38 i discovered that i enjoy creating stuff;- just anything i
                         can imagine. And in my eyes, coding is the perfect tool for that. First, i'm learning Web
                         Development,
                         and my thoughts about that are as follows:<br><br>
@@ -89,10 +90,10 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-4"></div>
-                <div class="col-md-4">
-                    <div class="what-i-use">
+                <div class="col-md-4 what-i-use">
+                    <div class="">
                         <h3>What I use</h3>
-                        <p>HTML<br>CSS<br>JavaScript<br>Python<br>Kotlin</p>
+                        <p><strong class="html">HTML</strong>/<strong class="css">CSS</strong>, <span class="js">JavaScript</span><br><i class="fab fa-python">Python</i>, <strong>Kotlin</strong></p>
                     </div>
                 </div>
                 <div class="col-md-4"></div>
@@ -116,11 +117,67 @@
 
                 <div class="col-md-3 site1p">
                     <p>Languages used:<br>HTML<br>CSS</p>
-                    <a href="index2.html" target="_blank"><button>Live</button></a>
-                    <a href="https://github.com/Matija0408/First-project-take2"
-                        target="_blank"><button>Github</button></a>
+                    <a href="index2.html" target="_blank" class="button-live hvr-shutter-out-horizontal">Live</a>
+                    <a href="https://github.com/Matija0408/First-project-take2" target="_blank"
+                        class="button-github hvr-shutter-out-horizontal">Github</a>
                 </div>
-                <div class="col-md-3"></div>
+                <div class="col-md-3">
+                        <h5 class="project-description">Project description</h5>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor porro
+                            ut ab voluptate nisi beatae dolorem in. Maxime porro voluptas illo fugit, tempore non
+                            voluptatibus optio nihil id fuga laborum!
+                        </p>
+                </div>
+            </div>
+            <div class="row site1">
+                <div class="col-md-3">
+                    <h4>Creativity</h4>
+                </div>
+                <div class="col-md-3">
+                    <div>
+                        <a href="https://visme.co/blog/how-to-unlock-creative-potential/" target="_blank"><img
+                                src="img/sparkler.jpg" alt="Hand holding a sparkler"></a>
+                    </div>
+                </div>
+
+                <div class="col-md-3 site1p">
+                    <p>Languages used:<br>HTML<br>CSS</p>
+                    <a href="https://visme.co/blog/how-to-unlock-creative-potential/" target="_blank"
+                        class="button-live hvr-shutter-out-horizontal">Live</a>
+                    <a href="https://github.com/Matija0408" target="_blank"
+                        class="button-github hvr-shutter-out-horizontal">Github</a>
+                </div>
+                <div class="col-md-3">
+                    <h5 class="project-description">Project description</h5>
+                    <p>(Fake project)<br>
+                        Exploration into unlocking human creative potential.
+                    </p>
+                </div>
+            </div>
+            <div class="row site1">
+                <div class="col-md-3">
+                    <h4>Omnifood</h4>
+                </div>
+                <div class="col-md-3">
+                    <div>
+                        <a href="http://omnifoodproject-com.stackstaging.com/" target="_blank"><img src="img/hero.jpg"
+                                alt="Food on a plate"></a>
+                    </div>
+                </div>
+
+                <div class="col-md-3 site1p">
+                    <p>Languages used:<br>HTML<br>CSS</p>
+                    <a href="http://omnifoodproject-com.stackstaging.com/" target="_blank"
+                        class="button-live hvr-shutter-out-horizontal">Live</a>
+                    <a href="https://github.com/Matija0408" target="_blank"
+                        class="button-github hvr-shutter-out-horizontal">Github</a>
+                </div>
+                <div class="col-md-3">
+                    <h5 class="project-description">Project description</h5>
+                    <p>(Fake project)<br>
+                        Omnifood, your new premium food delivery service.
+                    </p>
+                </div>
             </div>
         </div>
     </section>
