Down pointer added to Abaut page

--- a/about.html
+++ b/about.html
@@ -83,6 +83,15 @@
                 </div>
                 <div class="col-sm-4"></div>
             </div>
+            <div class="row">
+                <div class="col-sm-4"></div>
+                <div class="col-sm-4 point-div-size">
+                    <div class="div">
+                        <i class="fas fa-arrow-down point-down"></i>
+                    </div>
+                </div>
+                <div class="col-sm-4"></div>
+            </div>
         </div>
     </main>
     <!--Main Layout about page-->
@@ -93,7 +102,7 @@
                 <div class="col-md-4 what-i-use">
                     <div class="">
                         <h3>What I use</h3>
-                        <p><strong class="html">HTML</strong>/<strong class="css">CSS</strong>, <span class="js">JavaScript</span><br><i class="fab fa-python">Python</i>, <strong>Kotlin</strong></p>
+                        <p><strong class="html">HTML</strong>/<strong class="css">CSS</strong>, <span class="js">JavaScript</span><br><i class="fab fa-python">&nbspPython</i>, <strong>Kotlin</strong></p>
                     </div>
                 </div>
                 <div class="col-md-4"></div>
