--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">    
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css">
     <link rel="stylesheet" href="style2.css" type="text/css">
     <title>Matija's Web Developer Portfolio</title>
@@ -15,11 +15,12 @@
 
 <body>
 
-    <header>
-        <!--Background-->
-        <div>
-            <div>
-                <!--nav boilerplate taken from Bootstrap doc-->
+
+
+    <!--Main Layout-->
+    <main class="container-fluid contact-main bg-contact">
+        <div class="row">
+            <div class="col">
                 <ul class="nav justify-content-center links">
                     <li class="nav-item">
                         <a class="nav-link border-h" href="index2.html">Home</a>
@@ -31,19 +32,33 @@
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link border-d" href="doc/FakeCV.pdf" target="_blank"><i class="fa fa-download" aria-hidden="true"></i>&nbsp CV</a>
+                        <a class="nav-link border-d" href="doc/FakeCV.pdf" target="_blank"><i class="fa fa-download"
+                                aria-hidden="true"></i>&nbsp CV</a>
                     </li>
-                    <!--nav boilerplate taken from Bootstrap doc-->
                 </ul>
-                <!--nav-->
             </div>
         </div>
-        <!--Background-->
-    </header>
 
 
-    <!--Main Layout-->
-    <main>
+        <form class="col">
+            <h2 class="contact-position">CONTACT</h2>
+            <div class="form-input">
+                <input class="form-control" type="text" name="name" id="name" placeholder="Name" required>
+            </div>
+            <div class="form-input">
+                <input class="form-control" type="email" name="email" id="email" placeholder="Email" required>
+            </div>
+            <div class="form-input">
+                <input class="form-control" type="text" name="phone" id="phonenumber" placeholder="Phone" required>
+            </div>
+            <div class="textarea-contact">
+                <textarea class="form-control" type="text" name="text" id="text" placeholder="Message"
+                    required></textarea>
+            </div>
+            <div>
+                <button class="button">Send</button>
+            </div>
+        </form>
 
     </main>
     <!--Main Layout-->
@@ -58,3 +73,4 @@
 </body>
 
 </html>
+
