--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">    
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css">
     <link rel="stylesheet" href="style2.css" type="text/css">
     <title>Matija's Web Developer Portfolio</title>
@@ -57,14 +57,21 @@
 
                 <!--nav-->
             </div>
+            
+            <div class="container main-title-quote">
+                <div class="row d-flex justify-content-center">
+                    <div class="col-md-6 text-center">
+                        <h1>Matija Sekelj</h1>
+                        <h2 class="main-title">Full Stack Web Developer</h2>
+                        <p>
+                            “The only thing worse than being blind is having sight but no vision.”
 
-            <div class="header-quote">
-                <p>
-                    “The only thing worse than being blind is having sight but no vision.”
-
-                    – Helen Keller
-                </p>
+                            – Helen Keller
+                        </p>
+                    </div>
+                </div>
             </div>
+
 
         </div>
 
@@ -75,3 +82,13 @@
 </body>
 
 </html>
+
+<!--
+<div class="header-quote">
+                <p>
+                    “The only thing worse than being blind is having sight but no vision.”
+
+                    – Helen Keller
+                </p>
+            </div>
+-->
